[package]
name = "tic_tac_toe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.7", features = ["ws"]}
anyhow = "1.0"
tokio = { version = "1.3", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
futures = "0.3"